--- a/zad2.3
+++ b/zad2.3
@@ -1,21 +1,21 @@
 #include <stdio.h>
 
 int main() {
-    int l,p, pomocnicza;
+    int l,p, pomocnicza, n=1;
     printf("Podaj liczbe linii i liczbe par, która ma wystepować:");
     scanf("%d %d",&l, &p);
     pomocnicza = p;
     for(l;l>0;l--){
         p = pomocnicza;
-        if(l%2==1){
+        if(n%2==1){
             for(p; p>0; p--){
-                printf("*#");
+                printf("#*");
             }
             printf("\n");
         }
         else{
             for(p; p>0; p--){
-                printf("#*");
+                printf("*#");
             }
             printf("\n");
         }
